Fixed merge error. Set base dir to just '.'